# rust-lambda

./: README.md  cdk.json  jest.config.js  package-lock.json  package.json
lib/: rust-lambda-stack.ts
rust-lambda/: Cargo.toml
rust-lambda/.cargo/: config.toml
rust-lambda/src/: main.rs
test/: rust-lambda.test.ts
